# rust-macro-reexport-problem

./: Cargo.toml
my-binary-crate/: Cargo.toml
my-binary-crate/src/: main.rs
my-logger-crate/: Cargo.toml
my-logger-crate/src/: lib.rs
